# aibill

./: .gitignore  Dockerfile  LICENSE  README.md  build.py  docker-compose.yml
.github/workflows/: deploy.yml  versioning.yml
coze_agent_service/: .env.example  README.md  getjwttoken_util.py
coze_agent_service/res/: result.json
coze_token_service/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
coze_token_service/src/: lib.rs  main.rs
coze_token_service/src/auth/: handler.rs  model.rs
coze_token_service/src/config/: config.rs
coze_token_service/src/database/: mod.rs
coze_token_service/src/error/: error.rs  http.rs
coze_token_service/src/format/: handler.rs
coze_token_service/src/models/: response.rs
coze_token_service/src/routes/: mod.rs  routing.rs
coze_token_service/src/services/: email.rs
coze_token_service/src/tests/: health_check.rs
coze_token_service/tests/: integration_tests.rs
