[package]
name = "coze_token_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
tokio = { version = "1.44", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"] }
chrono = { version = "0.4.40", features = ["serde"] }
jsonwebtoken = "9.3.1"
base64 = { version = "0.22.1", features = ["alloc"] }
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
uuid = { version = "1.6.0", features = ["v4", "serde"] }
tower = "0.4.13"
hyper = { version = "1.2.0", features = ["server"] }
dotenvy = "0.15" # Add dotenvy for local .env loading
