[package]
name = "coze_token_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["json", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
jsonwebtoken = "9.3.1"
uuid = { version = "1.6.0", features = ["v4", "serde"] }
dotenvy = "0.15" # Add dotenvy for local .env loading
regex = "1.11.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.44", features = ["full", "macros", "rt-multi-thread"] }
